--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: "Factorio Mod luacheck"
-description: "Run a Factorio mod through luacheck."
+name: "ROBLOX luacheck"
+description: "Run a ROBLOX game through luacheck."
 author: "Roang_zero1 <lucas@brandstaetter.tech>"
 branding:
   icon: "check-square"
@@ -8,7 +8,7 @@ inputs:
   luacheckrc_url:
     description: "URL to the luacheckrc configuration file to be used during checking."
     required: false
-    default: "https://raw.githubusercontent.com/Nexela/Factorio-luacheckrc/0.17/.luacheckrc"
+    default: "https://raw.githubusercontent.com/Quenty/luacheck-roblox/master/.luacheckrc"
 runs:
   using: "docker"
   image: "Dockerfile"
